@@ -1,3 +1,7 @@
+2009-04-24  Emmanuel Briot  <briot@adacore.com>
+
+	* gnatcmd.adb, prj.adb, prj.ads: Remove unused entities
+
 2009-04-24  Ed Schonberg  <schonberg@adacore.com>
 
 	* sem_warn.adb: Add comment on obsolete warning
